prevent key wrapping in IE

--- a/css/keyboard.css
+++ b/css/keyboard.css
@@ -9,7 +9,7 @@
 .ui-keyboard-space { width: 15em; text-indent: -999em; }
 .ui-keyboard-preview-wrapper { text-align: center; }
 .ui-keyboard-preview { text-align: left; margin: 0 0 3px 0; display: inline; width: 99%;} /* width is calculated in IE, since 99% = 99% full browser width =( */ 
-.ui-keyboard-keyset { text-align: center; }
+.ui-keyboard-keyset { text-align: center; white-space: nowrap; }
 .ui-keyboard-input { text-align: left; }
 .ui-keyboard-input-current { -moz-box-shadow: 1px 1px 10px #00f; -webkit-box-shadow: 1px 1px 10px #00f; box-shadow: 1px 1px 10px #00f; }
 .ui-keyboard-placeholder { color: #888; }
